--- a/management/templates/base.html
+++ b/management/templates/base.html
@@ -24,6 +24,11 @@
     <link rel="stylesheet" href="{% static 'member-profile.css' %}">
     <link rel="stylesheet" href="{% static 'registrants.css' %}">
     <link rel="stylesheet" href="{% static 'registration.css' %}">
+    <link rel="stylesheet" href="{% static 'all-members-report.css' %}">
+    <link rel="stylesheet" href="{% static 'members-per-brgy-report.css' %}">
+    <link rel="stylesheet" href="{% static 'leader-members-report.css' %}">
+    <link rel="stylesheet" href="{% static 'members-report.css' %}">
+    <link rel="stylesheet" href="{% static 'leaders-report.css' %}">
     <!-- Add this to include Swiper.js -->
 <!--    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>-->
     <script src="{% static 'jquery-3.6.4.min.js' %}"></script>
