--- a/management/templates/no_member_brgy.html
+++ b/management/templates/no_member_brgy.html
@@ -7,6 +7,9 @@
         <div class="no-member-brgy-title-header-div">
             No Members Barangay Report
         </div>
+        <div>
+            <a href="{% url 'no-member-brgys-pdf' %}">Download PDF</a>
+        </div>
         <div class="no-member-brgy-table-container-div">
             <table class="no-member-brgys-table">
                 <tr class="no-member-brgys-table-row">
