--- a/management/templates/no_member_leaders_pdf.html
+++ b/management/templates/no_member_leaders_pdf.html
@@ -1,14 +1,54 @@
-{% extends 'base.html' %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <style>
+        .no-member-leaders-table{
+            font-family: 'Montserrat';
+            border-collapse: collapse;
+        }
 
-{% load static %}
+        .no-member-leaders-table-head{
+            border: 1px solid rgb(30, 30, 30);
+            width: 300px;
+            padding-top: 10px;
+            padding-bottom: 10px;
+        }
 
-{% block content %}
+        .no-member-leaders-table-data{
+            border: 1px solid rgb(30, 30, 30);
+            padding-left: 20px;
+            padding-top: 10px;
+            padding-bottom: 10px;
+        }
+
+        .no-member-leaders-table-link{
+            color: rgb(50, 50, 50);
+            text-decoration: none;
+        }
+
+        .no-member-leaders-table-link:hover{
+            text-decoration: underline;
+        }
+
+        .no-member-leaders-table-container-div{
+            margin: auto;
+            width: 85%;
+        }
+
+        .no-member-leaders-title-header-div{
+            text-align: center;
+            font-family: 'Montserrat';
+            font-size: 25px;
+            margin: 20px;
+        }
+    </style>
+</head>
+<body>
     <section class="no-member-leaders-utmost-container-section">
         <div class="no-member-leaders-title-header-div">
             No Member Leaders Report
-        </div>
-        <div>
-            <a href="{% url 'no-member-leader-pdf' %}">Download PDF</a>
         </div>
         <div class="no-member-leaders-table-container-div">
             <table class="no-member-leaders-table">
@@ -34,5 +74,5 @@
             </table>
         </div>
     </section>
-
-{% endblock %}
+</body>
+</html>
